# Radiux

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  GEMINI.md  LICENSE  PLAN.md  README.md  UPGRADE.md  alembic.ini  copilot-instructions.md  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.yml  main.mdc  pyproject.toml  windsurfrules
.github/workflows/: ci.yml
app/: __init__.py  cli.py  main.py
app/api/: __init__.py
app/api/v1/: admin_users.py  audit.py  auth.py  billing.py  customers.py  monitoring.py  nas.py  notifications.py  packages.py  reports.py  router.py  sessions.py  tenants.py  vendor_profiles.py  vouchers.py
app/core/: __init__.py  config.py  database.py  dependencies.py  rate_limit.py  security.py
app/jobs/: __init__.py  notification_sender.py
app/models/: __init__.py  admin_users.py  audit_logs.py  customers.py  invoices.py  nas_ext.py  nas_vendor_profiles.py  notifications.py  packages.py  payments.py  radius_core.py  tenants.py  vouchers.py  wallet_transactions.py
app/radius/: __init__.py  client.py  packet_builder.py
app/schemas/: __init__.py  audit.py  auth.py  customers.py  monitoring.py  nas.py  packages.py  vendor_profiles.py
app/services/: __init__.py  audit_service.py  auth_service.py  billing_service.py  coa_service.py  customer_service.py  monitoring_service.py  nas_service.py  notification_service.py  package_service.py  report_service.py  scheduler_service.py  vendor_profile_service.py  voucher_service.py  wallet_service.py
app/static/css/: .gitkeep  custom.css
app/templates/: base.html  index.html
app/templates/admin_users/: _modal_form.html  _table.html  index.html
app/templates/audit/: index.html  table.html
app/ui/: __init__.py  routes.py
docker/app/: Dockerfile
docker/freeradius/: Dockerfile
docker/nginx/: nginx.conf
docker/prometheus/: prometheus.yml
docs/: admin_guide.md  api_docs.md  go_live_checklist.md  user_manual.md
freeradius/dictionary.vendor/: .gitkeep  dictionary.cambium  dictionary.ubiquiti
freeradius/mods-available/: sql
freeradius/sites-available/: default  inner-tunnel
migrations/: env.py  script.py.mako
migrations/versions/: .gitkeep  001_phase1_initial.py  002_phase2_vendor_profiles.py  003_phase2_expand_nas_secret.py  20260618_1323_c0cf4fd5f4ac_seed_default_tenant.py  20260618_1359_9e82e62ae209_phase_5_billing_and_voucher_models.py  20260618_1426_199a7dc8568d_phase_6_wallet_transactions.py  20260618_1555_f6ac13f2c440_phase_8_notifications.py  20260618_1633_f59c0013c4aa_add_telegram_chat_id.py  20260618_1648_48c9211b4f31_phase_9_security_and_audit.py
scripts/: backup.sh  restore.sh
tests/: __init__.py  conftest.py  test_audit_service.py  test_auth_endpoint.py  test_auth_service.py  test_billing_service.py  test_health.py  test_integration_placeholder.py  test_nas_service.py  test_rate_limit.py  test_security.py  test_vendor_profiles.py  test_wallet_service.py
tests/integration/: conftest.py  test_audit_integration.py  test_auth_integration.py  test_customers_integration.py  test_nas_integration.py  test_rate_limit_integration.py  test_wallet_integration.py
(+28 files in other folders)
