[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "radiux"
version = "0.1.0"
description = "Web UI modern untuk mengelola FreeRADIUS — AAA, Hotspot, Billing/Voucher, dan Multi-Reseller untuk ISP"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.13"
authors = [{ name = "Radiux Team" }]
keywords = ["freeradius", "radius", "isp", "hotspot", "billing", "fastapi"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Framework :: FastAPI",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Internet",
    "Topic :: System :: Networking",
]

dependencies = [
    # Web framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    # Database
    "sqlalchemy[asyncio]>=2.0.0",
    "alembic>=1.14.0",
    "psycopg[binary]>=3.2.0",
    # Validation & settings
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    # Auth
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    # Templating
    "jinja2>=3.1.0",
    "python-multipart>=0.0.20",
    # Async
    "anyio==4.7.0",
    "bcrypt==4.3.0",
    "cryptography>=49.0.0",
    "email-validator>=2.3.0",
    "sse-starlette>=3.4.4",
    "pyrad>=2.5.4",
    "apscheduler>=3.11.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
]

[project.urls]
Homepage = "https://github.com/radiux/radiux"
Repository = "https://github.com/radiux/radiux"
"Bug Tracker" = "https://github.com/radiux/radiux/issues"

[project.scripts]
radiux = "app.cli:main"

# ---------------------------------------------------------------------------
# Tool configurations
# ---------------------------------------------------------------------------

[tool.ruff]
target-version = "py313"
line-length = 120

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "N",   # pep8-naming
    "S",   # flake8-bandit (security)
    "ANN", # flake8-annotations
]
ignore = [
    "S104",   # Possible binding to all interfaces (needed for Docker)
    "B008",   # FastAPI Depends() in function defaults — pattern ini wajib di FastAPI
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S", "ANN"]
"migrations/**" = ["ANN"]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.mypy]
python_version = "3.14"
strict = true
ignore_missing_imports = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "integration: marks tests that require docker-compose services (deselect with '-m \"not integration\"')",
    "unit: marks unit tests",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]
